--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@pdftron/pdfnet-node": "^10.12.1"
+    "@pdftron/data-extraction": "^10.12.0",
+    "@pdftron/pdfnet-node": "^10.12.1",
+    "sharp": "^0.33.5"
   }
 }
