--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A sample demonstrating how to verify whether a scanned document contains a signature.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
